--- a/html/maquette.html
+++ b/html/maquette.html
@@ -17,6 +17,17 @@
             <div class="logo__cercle">T</div>
             <div class="logo__text">Trafalgar</div>
         </div>
+
+        <nav>
+            <div class="menu">
+                <div class="menu__home">Home</div> 
+                <div class="menu__findadoctor">Find a doctor</div>
+                <div class="menu__apps">Apps</div>
+                <div class="menu__testimonials">Testimonials</div>
+                <div class="menu__aboutus">About us</div>
+                       
+            </div>
+        </nav>
     </header>
   </body>
 </html>
