modification menu et ajout header_text

--- a/html/maquette.html
+++ b/html/maquette.html
@@ -18,16 +18,25 @@
             <div class="logo__text">Trafalgar</div>
         </div>
 
-        <nav>
-            <div class="menu">
+      <nav>
+          <div class="menu">
                 <div class="menu__home">Home</div> 
-                <div class="menu__findadoctor">Find a doctor</div>
-                <div class="menu__apps">Apps</div>
-                <div class="menu__testimonials">Testimonials</div>
-                <div class="menu__aboutus">About us</div>
-                       
-            </div>
+                <div class="menu__item">Find a doctor</div>
+                <div class="menu__item">Apps</div>
+                <div class="menu__item">Testimonials</div>
+                <div class="menu__item">About us</div>                     
+          </div>
         </nav>
+        
+        <div class="header_text">
+          <div class="header_text__titre">Virtual healthcare for you</div>
+          <div class="header_text__paragraphe">Trafalgar provides progressive, and affordable 
+            healthcare, accessible on mobile and online 
+            for everyone
+          </div>
+          <div class="header_text__boutton">Consult today</div>
+        </div>
+
     </header>
   </body>
 </html>
