ajout image illustration

--- a/html/maquette.html
+++ b/html/maquette.html
@@ -36,6 +36,9 @@
           </div>
           <div class="header_text__boutton">Consult today</div>
         </div>
+        
+        <div class="header_image"><img src="../image/ilustration1.png" alt="illustration"></div>
+        
 
     </header>
   </body>
