ajout de our_service_text

--- a/html/maquette.html
+++ b/html/maquette.html
@@ -10,8 +10,6 @@
     <link href="../css/style.css" rel="stylesheet" type="text/css">
 
   </head>
-
-  <body>
     <header>
         <div class="logo">
             <div class="logo__cercle">T</div>
@@ -36,10 +34,17 @@
           </div>
           <div class="header_text__boutton">Consult today</div>
         </div>
-        
-        <div class="header_image"><img src="../image/ilustration1.png" alt="illustration"></div>
-        
 
+        <div class="header_image"><img src="../image/ilustration1.png" alt="illustration"></div>
     </header>
+
+    <body>
+      <div class="our_services">
+        <div class="our_services__text"></div>
+        <div class="our_services__text_titre">Our services</div>
+        <div class="our_services_text_rectangle"> </div>
+        <div class="our_services_text_paragraphe">We provide to you the best choiches for you. 
+          Adjust it to your health needs and make sure your undergo treatment<br>with our highly qualified doctors you can consult with us which type of service is suitable for your health</div>
+      </div>
   </body>
 </html>
