travaille en cour partie service

--- a/html/maquette.html
+++ b/html/maquette.html
@@ -40,11 +40,35 @@
 
     <body>
       <div class="our_services">
-        <div class="our_services__text"></div>
-        <div class="our_services__text_titre">Our services</div>
-        <div class="our_services_text_rectangle"> </div>
-        <div class="our_services_text_paragraphe">We provide to you the best choiches for you. 
-          Adjust it to your health needs and make sure your undergo treatment<br>with our highly qualified doctors you can consult with us which type of service is suitable for your health</div>
+        <div class="our_services__text">
+          <div class="our_services__text_titre">Our services</div>
+          <div class="our_services_text_rectangle"> </div>
+          <div class="our_services_text_paragraphe">We provide to you the best choiches for you. 
+            Adjust it to your health needs and make sure your undergo treatment<br>with our highly qualified doctors you can consult with us which type of service is suitable for your health
+          </div>
+      </div>
+
+      <div class="our_services__service">
+        <div class="our_services__service_search_doctor">
+          <div class="our_services__service_frame"><img src="../image/loupe.png" alt="image_loupe"></div>
+          <div class="our_services__service_titre">Search doctor</div>
+          <div class="our_services__service_paragraphe">Choose your doctor from thousands of specialist, general, and trusted hospitals</div>
+        </div>
+        
+        <div class="our_services__service_online_pharmacy">
+          <div class="our_services__service_frame"><img src="../image/medicament.png" alt="image_medicament"></div>
+          <div class="our_services__service_titre">Only pharmacy</div>
+          <div class="our_services__service_paragraphe">Buy  your medicines with our mobile application with a simple delivery system</div>
+        </div>
+
+        <div class="our_services__service_consultation">
+          <div class="our_services__service_frame"><img src="../image/consulatation.png" alt="image_consultation"></div>
+          <div class="our_services__service_titre">consulatation</div>
+          <div class="our_services__service_paragraphe">Free consultation with our trusted doctors and get the best recomendations</div>
+        </div>
+
+      </div>
+
       </div>
   </body>
 </html>
