partie services fini

--- a/html/maquette.html
+++ b/html/maquette.html
@@ -67,6 +67,25 @@
           <div class="our_services__service_paragraphe">Free consultation with our trusted doctors and get the best recomendations</div>
         </div>
 
+        <div class="our_services__service_detail_info">
+          <div class="our_services__service_frame"><img src="../image/detail_info.png" alt="image_detail_info"></div>
+          <div class="our_services__service_titre">Details info</div>
+          <div class="our_services__service_paragraphe">Free consultation with our trusted doctors and get the best recomendations</div>
+        </div>
+
+        <div class="our_services__service_emergency_care">
+          <div class="our_services__service_frame"><img src="../image/emergency.png" alt="image_emergency"></div>
+          <div class="our_services__service_titre">Emergency care</div>
+          <div class="our_services__service_paragraphe">You can get 24/7 urgent care for yourself or your children and your
+            lovely family</div>
+        </div>
+
+        <div class="our_services__service_traking">
+          <div class="our_services__service_frame"><img src="../image/traking.png" alt="image_traking"></div>
+          <div class="our_services__service_titre">Traking</div>
+          <div class="our_services__service_paragraphe">Track and save your medical history and health data</div>
+        </div>
+
       </div>
 
       </div>
