ajout partie leading + reorganisation css

--- a/html/maquette.html
+++ b/html/maquette.html
@@ -6,8 +6,10 @@
     <meta name="robots" content="noindex,nofollow"/>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>maquette</title>
-    <link href="../css/style.css" rel="stylesheet" type="text/css">
+    <title>Maquette</title>
+    <link href="../css/style_header.css" rel="stylesheet" type="text/css">
+    <link href="../css/style_our_services.css" rel="stylesheet" type="text/css">
+    <link href="../css/style_leading_healthcare.css" rel="stylesheet" type="text/css">
 
   </head>
     <header>
@@ -88,7 +90,17 @@
       </div>
 
       <div class="our_services__boutton">Learn more</div>
+    </div>
 
+    <div class="leading">
+      <div class="leading__image"><img src="../image/ilustration2.png" alt="illustration2"></div>
+      <div class="leading__text">
+        <div class="leading__text_titre"><h1>Leading healthcare providers</h1></div>
+        <div class="leading__text_rectangle"></div>
+        <div class="leading__text_paragraphe">Trafalgar provides progressive, and affordable healthcare, accessible on mobile and online for everyone. To us, it’s not just work. We take pride 
+          in the solutions we deliver
+        </div>
       </div>
+    </div>
   </body>
 </html>
