ajout partie download

--- a/html/maquette.html
+++ b/html/maquette.html
@@ -10,6 +10,7 @@
     <link href="../css/style_header.css" rel="stylesheet" type="text/css">
     <link href="../css/style_our_services.css" rel="stylesheet" type="text/css">
     <link href="../css/style_leading_healthcare.css" rel="stylesheet" type="text/css">
+    <link href="../css/style_download.css" rel="stylesheet" type="text/css">
 
   </head>
     <header>
@@ -89,7 +90,7 @@
         </div>
       </div>
 
-      <div class="our_services__boutton">Learn more</div>
+      <div class="our_services__bouton">Learn more</div>
     </div>
 
     <div class="leading">
@@ -100,7 +101,21 @@
         <div class="leading__text_paragraphe">Trafalgar provides progressive, and affordable healthcare, accessible on mobile and online for everyone. To us, it’s not just work. We take pride 
           in the solutions we deliver
         </div>
+        <div class="leading__text_bouton">Learn more</div>
       </div>
+    </div>
+
+    <div class="download">
+      <div class="download__text">
+        <div class="download__text_titre"><h1>Download our mobile apps</h1></div>
+        <div class="download__text_rectangle"></div>
+        <div class="download__text_paragraphe">Our dedicated patient engagement app and 
+          web portal allow you to access information instantaneously (no tedeous form, long calls, 
+          or administrative hassle) and securely
+        </div>
+        <div class="download__text_bouton">Download  ↓</div>
+      </div>
+      <div class="download__image"><img src="../image/ilustration3.png" alt="illustration3"></div>
     </div>
   </body>
 </html>
