ajout partie testimonials

--- a/html/maquette.html
+++ b/html/maquette.html
@@ -11,6 +11,7 @@
     <link href="../css/style_our_services.css" rel="stylesheet" type="text/css">
     <link href="../css/style_leading_healthcare.css" rel="stylesheet" type="text/css">
     <link href="../css/style_download.css" rel="stylesheet" type="text/css">
+    <link href="../css/style_testimonials" rel="stylesheet" type="text/css">
 
   </head>
     <header>
@@ -116,6 +117,24 @@
         <div class="download__text_bouton">Download  ↓</div>
       </div>
       <div class="download__image"><img src="../image/ilustration3.png" alt="illustration3"></div>
+    </div>
+
+    <div class="testimonials">
+      <div class="testimonials__titre">What our customer are saying</div>
+      <div class="testimonials__rectangle"></div>
+
+      <div class="testimonials__ligne">
+        <div class="testimonials__ligne_image">
+          <div class="testimonials__ligne_image_img"><img src="../image/testimonials.png " alt="Homme au bonet"></div>
+          <div class="testimonials__ligne_image_texte">
+            <div class="testimonials__ligne_image_texte_nom">Edward Newgate</div>
+            <div class="testimonials__ligne_image_texte_profession">Founder Circle</div>
+          </div>
+        </div>
+        <div class="testimonials__ligne_texte">“Our dedicated patient engagement app and 
+          web portal allow you to access information instantaneously (no tedeous form, long calls, 
+          or administrative hassle) and securely”</div>
+      </div>
     </div>
   </body>
 </html>
