ajout partie sur 3 article

--- a/html/maquette.html
+++ b/html/maquette.html
@@ -12,6 +12,7 @@
     <link href="../css/style_leading_healthcare.css" rel="stylesheet" type="text/css">
     <link href="../css/style_download.css" rel="stylesheet" type="text/css">
     <link href="../css/style_testimonials" rel="stylesheet" type="text/css">
+    <link href="../css/style_article.css" rel="stylesheet" type="text/css">
 
   </head>
     <header>
@@ -122,7 +123,6 @@
     <div class="testimonials">
       <div class="testimonials__titre">What our customer are saying</div>
       <div class="testimonials__rectangle"></div>
-
       <div class="testimonials__ligne">
         <div class="testimonials__ligne_image">
           <div class="testimonials__ligne_image_img"><img src="../image/testimonials.png " alt="Homme au bonet"></div>
@@ -135,6 +135,39 @@
           web portal allow you to access information instantaneously (no tedeous form, long calls, 
           or administrative hassle) and securely”</div>
       </div>
+    </div>
+
+    <div class="article">
+      <div class="article__titre"><h1>Check out our latest article</h1></div>
+      <div class="article__rectangle"></div>
+      <div class="article__bloc">
+
+        <div class="article__bloc_article">
+          <div class="article__bloc_article_image"><img src="../image/article1.png" alt="article1"></div>
+          <div class="article__bloc_article_titre">Disease detection, check 
+            up in the laboratory</div>
+          <div class="article__bloc_article_paragraphe">In this case, the role of the health laboratory is very important to do
+            a disease detection...</div>
+          <div class="article__bloc_article_readmore">Read more →</div>
+        </div>
+
+        <div class="article__bloc_article">
+          <div class="article__bloc_article_image"><img src="../image/article2.png" alt="article2"></div>
+          <div class="article__bloc_article_titre">Herbal medicines that are safe for consumption</div>
+          <div class="article__bloc_article_paragraphe">Herbal medicine is very widely used at this time because of its very good for your health...</div>
+          <div class="article__bloc_article_readmore">Read more →</div>
+        </div>
+
+        <div class="article__bloc_article">
+          <div class="article__bloc_article_image"><img src="../image/article3.png" alt="article3"></div>
+          <div class="article__bloc_article_titre">Natural care for healthy facial skin</div>
+          <div class="article__bloc_article_paragraphe">A healthy lifestyle should start from now and also for your skin health.
+            There are some...</div>
+          <div class="article__bloc_article_readmore">Read more →</div>
+        </div>
+      </div>
+
+      <div class="article__bouton">View all</div>
     </div>
   </body>
 </html>
