--- a/html/maquette.html
+++ b/html/maquette.html
@@ -11,8 +11,9 @@
     <link href="../css/style_our_services.css" rel="stylesheet" type="text/css">
     <link href="../css/style_leading_healthcare.css" rel="stylesheet" type="text/css">
     <link href="../css/style_download.css" rel="stylesheet" type="text/css">
-    <link href="../css/style_testimonials" rel="stylesheet" type="text/css">
+    <link href="../css/style_testimonials.css" rel="stylesheet" type="text/css">
     <link href="../css/style_article.css" rel="stylesheet" type="text/css">
+    <link href="../css/style_footer.css" rel="stylesheet" type="text/css">
 
   </head>
     <header>
@@ -168,6 +169,40 @@
       </div>
 
       <div class="article__bouton">View all</div>
+    </div>
+
+    <div class="footer">
+      <div class="footer__trafalgar">
+        <div class="footer__trafalgar_logo">
+          <div class="footer__trafalgar_logo_cercle">T</div>
+          <div class="footer__trafalgar_logo_titre">Trafalgar</div>
+        </div>
+        
+        <div class="footer__trafalgar_paragraphe">Trafalgar provides progressive, and affordable healthcare, accessible on mobile and online 
+          for everyone <br> <br> ©Trafalgar PTY LTD 2020. All rights reserved
+        </div>
+      </div>
+      <div class="footer__company">
+        <div class="footer__liste_titre">Company</div>
+        <div class="footer__liste">About</div>
+        <div class="footer__liste">Testimonials</div>
+        <div class="footer__liste">Find a doctor</div>
+        <div class="footer__liste">Apps</div>
+      </div>
+      <div class="footer__region">
+        <div class="footer__liste_titre">Region</div>
+        <div class="footer__liste">Indonesia</div>
+        <div class="footer__liste">Singapore</div>
+        <div class="footer__liste">HongKong</div>
+        <div class="footer__liste">Canada</div>
+      </div>
+      <div class="footer__help">
+        <div class="footer__liste_titre">Help</div>
+        <div class="footer__liste">Help center</div>
+        <div class="footer__liste">Contact support</div>
+        <div class="footer__liste">Instructions</div>
+        <div class="footer__liste">How it works</div>
+      </div>
     </div>
   </body>
 </html>
